--- a/www/css/index.css
+++ b/www/css/index.css
@@ -1,7 +1,7 @@
 
 
 
-body {
+/*body {
     background-image:-webkit-linear-gradient(top, #c8c8c8 0%, #E1E1E1 51%);
     background-attachment:fixed;
     font-family:'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif;
@@ -10,9 +10,14 @@ body {
     margin:0px;
     padding:0px;
     width:100%;
-}
+}*/
 
+body { background-image: url(http://www.missmaryk.com/nimbg3.gif); 
+        background-repeat: repeat; }
 
+/*a {
+    font-size: large;
+}*/
 
 
 h1 {
@@ -24,41 +29,51 @@ h1 {
 
 h2 {
     font-size: 18px;
-    text-align: center;
+    text-align: right;
     font-weight: normal;
-    margin-left: 20px;
+    
+    margin-right: 30px;
     text-decoration: underline;
 }
 
 h3 {
     font-size: 18px;
+    text-align: right;
+    font-weight: normal;
+    margin-right: 20px;
+}
+
+#center {
+    font-size: 25px;
     text-align: center;
     font-weight: normal;
-    margin-left: 20px;
+    margin-right: 20px;   
 }
 
-img{
-    -moz-border-radius: 5px/5px;
-    -webkit-border-radius: 5px 5px;
-    border-radius: 5px/5px;;
-    border:solid 10px #e23; 
-    width:10px;
-    height:10px;
-    margin-left: 380px;  
-    background: green;
-}
 
-span {
 
-    display:inline;
-}
-
-div a {
+/*div a {
   display: inline-block;
   padding: 5px;
+}*/
+
+li {
+    width: 400px;
+    height: 130px;
+    background: gray;
 }
 
- 
+#data-msg {
+    width: 400px;
+    height: 130px;
+    background: gray;
+    font-size: 30px;
+}
 
- 
+a {
+    font-size: 20px;
+    text-align: center;
+    font-weight: normal;
+    margin-right: 20px;
+}
 
